Added local persistence to avoid losing everything when reloading the page
Use "setup" tags for script and move logic to root of scripts

Add information about using cookies to save the calc data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
+    <meta name="keywords" content="cat,barf,mishi,calculator" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mishi-barf.com/" />
+    <meta property="og:title" content="<%= productName %>" />
+    <meta property="og:description" content="<%= productDescription %>" />
+    <meta property="og:image" content="https://mishi-barf.com/favicon.ico" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mishi-barf.com/" />
+    <meta property="twitter:title" content="<%= productName %>" />
+    <meta property="twitter:description" content="<%= productDescription %>" />
+    <meta
+      property="twitter:image"
+      content="https://mishi-barf.com/favicon.ico"
+    />
 
     <link
       rel="icon"
